--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,2 +1,10 @@
 @import url('./reset.css');
+@import url('./global.css');
 
+body {
+    background: var(--very-dark-blue);
+}
+
+footer {
+    color: white;
+}
