--- a/src/css/global.css
+++ b/src/css/global.css
@@ -10,4 +10,7 @@
     --size-paragraph: 15px;
     --family: [Overpass](https://fonts.google.com/specimen/Overpass);
     --weights: 400, 700;
+
+    --mobile: 375px;
+    --desktop: 1440px;
 }
