--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,10 +1,11 @@
 :root {
-    --branco: hsl(0, 0%, 100%);
-    --light-grey: hsl(217, 12%, 63%);
-    --dark-blue: hsl(213, 19%, 18%);
+    --branco: #ffffff;
+    --light-grey: #959eac;
+    --dark-blue: #252d37;
     --very-dark-blue: #131518;
+    --black-gradient: radial-gradient(98.96% 98.96% at 50% 50%, #232A34 0%, #181E27 100%);
 
-    --laranja: hsl(25, 97%, 53%);
+    --laranja: #fb7413;
 
 
     --size-paragraph: 15px;
