--- a/src/css/global.css
+++ b/src/css/global.css
@@ -3,6 +3,7 @@
     --light-grey: #959eac;
     --dark-blue: #252d37;
     --very-dark-blue: #131518;
+    --estrela: #262E38;
     --black-gradient: radial-gradient(98.96% 98.96% at 50% 50%, #232A34 0%, #181E27 100%);
 
     --laranja: #fb7413;
