--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
     --branco: #ffffff;
     --light-grey: #959eac;
+    --gray: #969fad;
     --dark-blue: #252d37;
     --very-dark-blue: #131518;
     --estrela: #262E38;
@@ -10,10 +13,8 @@
 
 
     --size-paragraph: 15px;
-    --family: [Overpass](https://fonts.google.com/specimen/Overpass);
-    --weights1: 400;
-    --weights2: 700;
-
+    --family: "Overpass", sans-serif;
+    --family2: [Overpass](https://fonts.google.com/specimen/Overpass);
     --mobile: 375px;
     --desktop: 1440px;
 }
