--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,6 +4,7 @@
     --branco: #ffffff;
     --light-grey: #959eac;
     --gray: #969fad;
+    --numero: #7c8798;
     --dark-blue: #252d37;
     --very-dark-blue: #131518;
     --estrela: #262E38;
