--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,8 +10,7 @@ body {
     padding: 30px;
 }
 
-.card {
-    font-family: var(--family);
+.card, .thank-you {
     width: 412px;
     height: 416px;
     background: var(--black-gradient);
@@ -26,7 +25,6 @@ body {
 }
 
 .card h1 {
-    color: var(--branco);
     font-size: 28px;
     margin: 30px 0px 7px;
 }
@@ -42,13 +40,34 @@ body {
     display: flex;
     gap: 22px;
     justify-content: space-between;
+    margin-bottom: 32px;
 }
 
 .card .buttons button {
-    padding: 15px;
     border-radius: 50%;
+    width: 51px;
+    height: 51px;
+    background-color: var(--estrela);
+    color: var(--numero);
 }
 
+.card .btn-submit {
+    background: var(--laranja);
+    display: block;
+    width: 100%;
+    height: 45px;
+    border-radius: 22.5px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.thank-you {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 footer {
     color: white;
