--- a/src/css/global.css
+++ b/src/css/global.css
@@ -17,5 +17,5 @@
     --family2: [Overpass](https://fonts.google.com/specimen/Overpass);
     --mobile: 375px;
     --desktop: 1440px;
-    --mycolor: #5a5bb5;
+    /* --mycolor: #5a5bb5; */
 }
